--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.0.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
