add time picker

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,7 @@ target 'events' do
     'RCTWebSocket',
   ]
 
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker/RNDateTimePicker.podspec'
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
