--- a/package.json
+++ b/package.json
@@ -8,29 +8,30 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.0.0",
+    "axios": "^0.19.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-dialog": "^5.6.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7",
-    "@react-native-community/datetimepicker": "2.0.0",
-    "axios": "^0.19.0",
-    "react-native-dialog": "^5.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "babel-jest": "24.9.0",
+    "babel-preset-expo": "^7.1.0",
     "jest": "24.9.0",
     "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0",
-    "babel-preset-expo": "^7.1.0"
+    "react-test-renderer": "16.9.0"
   },
   "private": true
 }
